# pagetract

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  run_api.py  run_convert.py  run_demo.py
docs/: requirements-v1.md  requirements-v2.1.md  requirements-v2.md  requirements-v3.md
src/pagetract/: __init__.py  cli.py  config.py  models.py
src/pagetract/api/: __init__.py  app.py
src/pagetract/core/: __init__.py  cache.py  converter.py  cross_page_merger.py  image_saver.py  layout_detector.py  markdown_assembler.py  native_extractor.py  pdf_detector.py  pipeline.py  preprocessor.py  prompts.py  region_dispatcher.py  renderer.py  video_processor.py  vlm_engine.py
src/pagetract/demo/: __init__.py  gradio_app.py
tests/: __init__.py  test_cache.py  test_config.py  test_cross_page.py  test_dedup.py  test_layout.py  test_markdown.py  test_models.py  test_prompts.py  test_video.py
